--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,15 @@
             </plugin>
         </plugins>
     </build>
+         <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>3.0.0</version> <!-- Use the latest version -->
+        </plugin>
+    </plugins>
+</build>
+
 
 </project>
